Refactored MiXiM NED files use interfaces and inheritance to simplify the MiXiM definitions of nodes and networks.

--- a/examples/BaseMoBANNetwork/example2.ini
+++ b/examples/BaseMoBANNetwork/example2.ini
@@ -21,18 +21,18 @@ BaseMoBANNetwork.MoBANCoor[1].mobilityPatternFile = "MoBAN_Pattern_in1.txt"
 
 
 ################ Setting Modules type ####################
-BaseMoBANNetwork.node[*].applType = "BurstApplLayer"
+BaseMoBANNetwork.node[*].applicationType = "BurstApplLayer"
 BaseMoBANNetwork.node[*].appl.debug = false
 BaseMoBANNetwork.node[*].appl.headerLength = 512bit
 BaseMoBANNetwork.node[*].appl.burstSize = 3
 
-BaseMoBANNetwork.node[*].netwType = "BaseNetwLayer"
-BaseMoBANNetwork.node[*].net.debug = false
-BaseMoBANNetwork.node[*].net.stats = false
-BaseMoBANNetwork.node[*].net.headerLength = 32bit
+BaseMoBANNetwork.node[*].networkType = "BaseNetwLayer"
+BaseMoBANNetwork.node[*].netwl.debug = false
+BaseMoBANNetwork.node[*].netwl.stats = false
+BaseMoBANNetwork.node[*].netwl.headerLength = 32bit
 
-BaseMoBANNetwork.node[0..19].mobType = "ConstSpeedMobility"
-BaseMoBANNetwork.node[20..43].mobType = "MoBANLocal"
+BaseMoBANNetwork.node[0..19].mobilityType = "ConstSpeedMobility"
+BaseMoBANNetwork.node[20..43].mobilityType = "MoBANLocal"
 
 BaseMoBANNetwork.node[*].mobility.debug = false
 BaseMoBANNetwork.node[*].mobility.updateInterval = 0.1s
