--- a/examples/BaseMoBANNetwork/omnetpp.ini
+++ b/examples/BaseMoBANNetwork/omnetpp.ini
@@ -20,7 +20,6 @@ BaseMoBANNetwork.**.coreDebug = false
 #			WorldUtility parameters                      #
 ##########################################################
 BaseMoBANNetwork.world.useTorus = false
-BaseMoBANNetwork.world.use2D = false
 
 ##########################################################
 #			         channel parameters                  #
@@ -54,6 +53,8 @@ BaseMoBANNetwork.node[*].nic.phy.maxTXPower = 110.11mW
 BaseMoBANNetwork.node[*].nic.phy.initialRadioState = 0
 
 ################ MAC layer parameters ####################
+BaseMoBANNetwork.node[*].nic.mac.rxSetupTime = 0s
+BaseMoBANNetwork.node[*].nic.mac.useMACAcks = false
 BaseMoBANNetwork.node[*].nic.mac.queueLength = 5
 BaseMoBANNetwork.node[*].nic.mac.headerLength = 24bit
 BaseMoBANNetwork.node[*].nic.mac.slotDuration = 0.04s
@@ -63,7 +64,7 @@ BaseMoBANNetwork.node[*].nic.mac.defaultChannel = 0
 BaseMoBANNetwork.node[*].nic.mac.bitrate = 15360bps
 BaseMoBANNetwork.node[*].nic.mac.contentionWindow = 20
 BaseMoBANNetwork.node[*].nic.mac.txPower = 110.11mW
-
+BaseMoBANNetwork.node[*].nic.mac.aTurnaroundTime = 0.000215s
 
 ################ NETW layer parameters ####################
 
