--- a/examples/Mac80211/omnetpp.ini
+++ b/examples/Mac80211/omnetpp.ini
@@ -26,7 +26,7 @@ cmdenv-module-messages = true
 
 **.playgroundSizeX = 500m
 **.playgroundSizeY = 500m
-**.playgroundSizeZ = 0
+**.playgroundSizeZ = 50m
 **.numHosts = 10
 
 # uncomment to enable debug messages for all modules
@@ -39,8 +39,6 @@ cmdenv-module-messages = true
 #			WorldUtility parameters                      #
 ##########################################################
 **.world.useTorus = false
-**.world.use2D = true
-
 
 ##############################################################################
 #       Parameters for the ConnectionManager                                 #
@@ -117,8 +115,8 @@ cmdenv-module-messages = true
 ##############################################################################
 #       Parameters for the Network Layer                                     #
 ##############################################################################
-**.net.headerLength = 32bit# in bits
-**.net.stats = false
+**.netwl.headerLength = 32bit# in bits
+**.netwl.stats = false
 
 ##############################################################################
 #       Parameters for ARP
