--- a/examples/WSNRouting/omnetpp.ini
+++ b/examples/WSNRouting/omnetpp.ini
@@ -13,7 +13,6 @@ repeat = 5
 **.numHosts = ${numHosts=5,25}
 
 **.world.useTorus = false
-**.world.use2D = true
 
 **.connectionManager.sendDirect = false
 **.connectionManager.pMax = 1.1mW
@@ -108,35 +107,35 @@ repeat = 5
 
 [Config convergecast]
 description="Wireless sensor network with typical convergecast traffic towards one sink (host 0) and dynamic routing."
-**.node[*].netwType = "WiseRoute"
-**.node[*].net.stats = true
-**.node[0].net.routeFloodsInterval = 1200 s
-**.node[*].net.sinkAddress = 0
-**.node[*].net.headerLength = 24 bit
-**.node[0].app.nbPackets = 0
-**.node[*].app.nbPackets = 10
-**.node[*].app.destAddr = 0
-**.node[*].app.trafficType = "periodic"
-**.node[*].app.trafficParam = 30 s  # each node sends 1 packet every 30 seconds 
-**.node[*].app.initializationTime = 30 s
-**.node[*].app.headerLength = 50 byte
+**.node[*].networkType = "WiseRoute"
+**.node[*].netwl.stats = true
+**.node[0].netwl.routeFloodsInterval = 1200 s
+**.node[*].netwl.sinkAddress = 0
+**.node[*].netwl.headerLength = 24 bit
+**.node[0].appl.nbPackets = 0
+**.node[*].appl.nbPackets = 10
+**.node[*].appl.destAddr = 0
+**.node[*].appl.trafficType = "periodic"
+**.node[*].appl.trafficParam = 30 s  # each node sends 1 packet every 30 seconds 
+**.node[*].appl.initializationTime = 30 s
+**.node[*].appl.headerLength = 50 byte
 
 [Config flooding]
 description="Wireless sensor network with the sink flooding the network periodically."
-**.node[*].netwType = "Flood"
-**.node[*].net.stats = true
-**.node[*].net.headerLength = 24 bit
-**.node[0].app.nbPackets = 10
-**.node[*].app.nbPackets = 0
-**.node[*].app.destAddr = -1
-**.node[*].app.broadcastPackets = true
-**.node[*].app.trafficType = "periodic"
-**.node[*].app.trafficParam = 30 s  # each node sends 1 packet every 30 seconds 
-**.node[*].app.initializationTime = 10 s
-**.node[*].app.headerLength = 50 byte
+**.node[*].networkType = "Flood"
+**.node[*].netwl.stats = true
+**.node[*].netwl.headerLength = 24 bit
+**.node[0].appl.nbPackets = 10
+**.node[*].appl.nbPackets = 0
+**.node[*].appl.destAddr = -1
+**.node[*].appl.broadcastPackets = true
+**.node[*].appl.trafficType = "periodic"
+**.node[*].appl.trafficParam = 30 s  # each node sends 1 packet every 30 seconds 
+**.node[*].appl.initializationTime = 10 s
+**.node[*].appl.headerLength = 50 byte
 
 [Config probabilisticBcast]
 description="Wireless sensor network using probabilistic broadcast."
 extends=flooding
-**.node[*].netwType = "AdaptiveProbabilisticBroadcast"
+**.node[*].networkType = "AdaptiveProbabilisticBroadcast"
 
