--- a/examples/multiConnectionManager/omnetpp.ini
+++ b/examples/multiConnectionManager/omnetpp.ini
@@ -17,7 +17,6 @@ MultiConnectionManager.numISMHosts = 2
 #			WorldUtility parameters                      #
 ##########################################################
 MultiConnectionManager.world.useTorus = false
-MultiConnectionManager.world.use2D = false
 
 ##########################################################
 #			    GSM channel parameters                  #
@@ -49,9 +48,9 @@ MultiConnectionManager.*Node*.appl.headerLength = 1024bit
 MultiConnectionManager.*Node*.appl.burstSize = 3
 
 ################### Network Layer ########################
-MultiConnectionManager.*Node*.net.headerLength = 32bit# in bits
-MultiConnectionManager.*Node*.net.debug = false
-MultiConnectionManager.*Node*.net.stats = false
+MultiConnectionManager.*Node*.netwl.headerLength = 32bit# in bits
+MultiConnectionManager.*Node*.netwl.debug = false
+MultiConnectionManager.*Node*.netwl.stats = false
 
 ################ MAC layer parameters ####################
 MultiConnectionManager.*Node[*].nic.mac.queueLength = 5
