--- a/examples/BaseMoBANNetwork/example1.ini
+++ b/examples/BaseMoBANNetwork/example1.ini
@@ -20,17 +20,17 @@ BaseMoBANNetwork.MoBANCoor[0].mobilityPatternFile = "MoBAN_Pattern_in0.txt"
 
 
 ################ Setting Modules type ####################
-BaseMoBANNetwork.node[*].applType = "BurstApplLayer"
+BaseMoBANNetwork.node[*].applicationType = "BurstApplLayer"
 BaseMoBANNetwork.node[*].appl.debug = false
 BaseMoBANNetwork.node[*].appl.headerLength = 512bit
 BaseMoBANNetwork.node[*].appl.burstSize = 3
 
-BaseMoBANNetwork.node[*].netwType = "BaseNetwLayer"
-BaseMoBANNetwork.node[*].net.debug = false
-BaseMoBANNetwork.node[*].net.stats = false
-BaseMoBANNetwork.node[*].net.headerLength = 32bit
+BaseMoBANNetwork.node[*].networkType = "BaseNetwLayer"
+BaseMoBANNetwork.node[*].netwl.debug = false
+BaseMoBANNetwork.node[*].netwl.stats = false
+BaseMoBANNetwork.node[*].netwl.headerLength = 32bit
 
-BaseMoBANNetwork.node[*].mobType = "MoBANLocal"
+BaseMoBANNetwork.node[*].mobilityType = "MoBANLocal"
 BaseMoBANNetwork.node[*].mobility.debug = false
 BaseMoBANNetwork.node[*].mobility.updateInterval = 0.1s
 
