--- a/examples/lmac/omnetpp.ini
+++ b/examples/lmac/omnetpp.ini
@@ -18,7 +18,6 @@ sim-time-limit = 150s
 #			WorldUtility parameters                      #
 ##########################################################
 **.world.useTorus = false
-**.world.use2D = true
 
 ##########################################################
 #			         channel parameters                  #
@@ -79,29 +78,29 @@ sim-time-limit = 150s
 
 **.node[0].mobility.x = 150
 **.node[0].mobility.y = 200
-**.node[0].mobility.z = 250 #ignored when use2D
+**.node[0].mobility.z = 250
 
 **.node[1].mobility.x = 250
 **.node[1].mobility.y = 100
-**.node[1].mobility.z = 100 #ignored when use2D
+**.node[1].mobility.z = 100
 
 **.node[2].mobility.x = 250
 **.node[2].mobility.y = 200
-**.node[2].mobility.z = 200 #ignored when use2D
+**.node[2].mobility.z = 200
 
 **.node[3].mobility.x = 50
 **.node[3].mobility.y = 100
-**.node[3].mobility.z = 110 #ignored when use2D
+**.node[3].mobility.z = 110
 
 **.node[4].mobility.x = 150
 **.node[4].mobility.y = 180
-**.node[4].mobility.z = 100 #ignored when use2D
+**.node[4].mobility.z = 100
 
 **.node[5].mobility.x = 50
 **.node[5].mobility.y = 200
-**.node[5].mobility.z = 10 #ignored when use2D
+**.node[5].mobility.z = 10
 
-**.node[*].applType = "SensorApplLayer"
+**.node[*].applicationType = "SensorApplLayer"
 **.appl.trafficType = "periodic"
 **.appl.trafficParam = ${traffic = 1..19 step 2}s #in seconds
 **.appl.nbPackets = 10
@@ -109,14 +108,12 @@ sim-time-limit = 150s
 **.appl.destAddr = 4
 **.node[4].appl.broadcastPackets = true
 
-**.node[*].mobType = "BaseMobility"
 **.node[*].mobility.debug = false
 **.node[*].mobility.updateInterval = 0.1s
 
-**.node[*].netwType = "BaseNetwLayer"
-**.node[*].net.debug = false
-**.node[*].net.stats = false
-**.node[*].net.headerLength = 32bit
+**.node[*].netwl.debug = false
+**.node[*].netwl.stats = false
+**.node[*].netwl.headerLength = 32bit
 
 **.batteryStats.detail = true
 **.batteryStats.timeSeries = false
@@ -136,7 +133,3 @@ sim-time-limit = 150s
 **.nic.setupTxCurrent = 8.2mA
 **.nic.rxTxCurrent = 17mA
 **.nic.txRxCurrent = 17mA
-
-
-
-
