--- a/.project
+++ b/.project
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
 	<name>mixim</name>
-	<comment></comment>
+	<comment>Version 2.2</comment>
 	<projects>
 	</projects>
 	<buildSpec>
