Update sample simulation for rewritten 11p model

--- a/examples/veins/omnetpp.ini
+++ b/examples/veins/omnetpp.ini
@@ -64,18 +64,18 @@ sim-time-limit = 6000s
 #                    NIC-Settings                        #
 ##########################################################
 *.connectionManager.pMax = 20mW
-*.connectionManager.sat = -94dBm
+*.connectionManager.sat = -89dBm
 *.connectionManager.alpha = 2.0
 *.connectionManager.carrierFrequency = 5.890e9 Hz
 *.connectionManager.sendDirect = true
 
 *.**.nic.mac1609_4.serviceChannel = 2
 
-*.**.nic.mac80211p.txPower = 20mW
-*.**.nic.mac80211p.bitrate = 18Mbps
+*.**.nic.mac1609_4.txPower = 20mW
+*.**.nic.mac1609_4.bitrate = 18Mbps
 
-*.**.nic.phy80211p.sensitivity = -94dBm
-*.**.nic.phy80211p.maxTXPower = 20mW
+*.**.nic.phy80211p.sensitivity = -89dBm
+*.**.nic.phy80211p.maxTXPower = 10mW
 *.**.nic.phy80211p.useThermalNoise = true
 *.**.nic.phy80211p.thermalNoise = -110dBm
 *.**.nic.phy80211p.decider = xmldoc("config.xml")
@@ -94,6 +94,7 @@ sim-time-limit = 6000s
 *.node[*].appl.beaconInterval = 1s
 *.node[*].appl.beaconPriority = 3
 *.node[*].appl.dataPriority = 2
+*.node[*].appl.maxOffset = 0.005s
 
 ##########################################################
 #                      Mobility                          #
@@ -106,7 +107,14 @@ sim-time-limit = 6000s
 *.node[10].mobility.accidentStart = 75s
 *.node[10].mobility.accidentDuration = 30s
 
+[Config nodebug]
+description = "default settings"
+**.debug = false
+**.coreDebug = false
+*.annotations.draw = false
+
 [Config debug]
+description = "(very slow!) draw and print additional debug information"
 **.debug = true
 **.coreDebug = true
 *.annotations.draw = true
