Rewrite 1609.4 MAC according to specification.

--- a/examples/ieee80211p/omnetpp.ini
+++ b/examples/ieee80211p/omnetpp.ini
@@ -4,36 +4,24 @@ sim-time-limit = 200s
 num-rngs = 3
 
 debug-on-errors = true
-**.vector-max-buffered-values = 1
 
-*.baseWorldUtility.coreDebug = false
-*.baseWorldUtility.playgroundSizeX = 2100m
-*.baseWorldUtility.playgroundSizeY = 2100m
-*.baseWorldUtility.playgroundSizeZ = 0
-*.baseWorldUtility.useTorus = false
-*.baseWorldUtility.use2D = true
+**.coreDebug = false
+**.playgroundSizeX = 400m
+**.playgroundSizeY = 400m
+**.playgroundSizeZ = 0
+**.useTorus = false
+**.use2D = true
 
-*.connectionManager.coreDebug = false
 *.connectionManager.sendDirect = false
 
-*.host[*].mobility.x = 0
-*.host[*].mobility.y = 0
-*.host[*].mobility.z = 0
+**.numHosts = 3
 
 **.scalar-recording = true
 **.vector-recording = true
 
-##########################################################
-#            TraCIScenarioManager parameters             #
-##########################################################
-*.manager.updateInterval = 1s
-*.manager.host = "localhost"
-*.manager.port = 9999
-*.manager.roiRects = "250,330-1650,1730"
-*.manager.moduleType = "org.mixim.examples.ieee80211p.Node"
-*.manager.moduleDisplayString = ""
-*.manager.autoShutdown = false
-*.manager.margin = 25
+output-scalar-file = ${resultdir}/${configname}-0-r${repetition}.sca
+output-vector-file = ${resultdir}/${configname}-0-r${repetition}.vec
+
 
 ##########################################################
 #            11p specific parameters                     #
@@ -47,8 +35,8 @@ debug-on-errors = true
 
 *.**.nic.mac1609_4.serviceChannel = 2
 
-*.**.nic.mac80211p.txPower = 20mW
-*.**.nic.mac80211p.bitrate = 18Mbps
+*.**.nic.mac1609_4.txPower = 20mW
+*.**.nic.mac1609_4.bitrate = 18Mbps
 
 *.**.nic.phy80211p.sensitivity = -94dBm
 *.**.nic.phy80211p.maxTXPower = 20mW
@@ -58,9 +46,11 @@ debug-on-errors = true
 *.**.nic.phy80211p.analogueModels = xmldoc("config.xml")
 *.**.nic.phy80211p.usePropagationDelay = true
 
+
 ##########################################################
 #                    WaveAppLayer                        #
 ##########################################################
+*.host[*].applicationType = "TestWaveApplLayer"
 *.host[*].appl.debug = false
 *.host[*].appl.headerLength = 256 bit
 *.host[*].appl.sendBeacons = true
@@ -70,7 +60,22 @@ debug-on-errors = true
 *.host[*].appl.beaconPriority = 3
 *.host[*].appl.dataPriority = 2
 
-[Config GridTest]
-*.manager.launchConfig = xmldoc("gridtest.launchd.xml")
-output-scalar-file = ${resultdir}/${configname}-0-r${repetition}.sca
-output-vector-file = ${resultdir}/${configname}-0-r${repetition}.vec
+
+##############################################################################
+#       Parameters for the Mobility Module                                   #
+##############################################################################
+
+# if set to 0 the MN does not move
+**.mobility.speed = 0mps
+**.mobility.updateInterval = 0.5s
+
+**.host[0].mobility.x = 25
+**.host[0].mobility.y = 200
+
+**.host[1].mobility.x = 375
+**.host[1].mobility.y = 375
+
+**.host[2].mobility.x = 375
+**.host[2].mobility.y = 25
+
+**.mobility.z = 0
