Add antenna offset (node pos vs. front bumper pos)

--- a/examples/traci_launchd/omnetpp.ini
+++ b/examples/traci_launchd/omnetpp.ini
@@ -97,6 +97,7 @@ sim-time-limit = 6000s
 *.node[*].mobility.x = 0
 *.node[*].mobility.y = 0
 *.node[*].mobility.z = 0
+*.node[*].mobility.antennaPositionOffset = 3.47m
 *.node[*].mobility.accidentCount = 0
 *.node[*].mobility.accidentStart = -1s
 *.node[*].mobility.accidentDuration = -1s
