Update SUMO simulation from Veins

--- a/examples/traci_launchd/omnetpp.ini
+++ b/examples/traci_launchd/omnetpp.ini
@@ -38,7 +38,7 @@ sim-time-limit = 6000s
 ##########################################################
 #			TraCIScenarioManager parameters              #
 ##########################################################
-*.manager.updateInterval = 1s
+*.manager.updateInterval = 0.1s
 *.manager.host = "localhost"
 *.manager.port = 9999
 *.manager.moduleType = "org.mixim.examples.traci_launchd.Car"
@@ -46,7 +46,7 @@ sim-time-limit = 6000s
 *.manager.moduleDisplayString = ""
 *.manager.autoShutdown = true
 *.manager.margin = 25
-*.manager.launchConfig = xmldoc("sumo-launchd.launch.xml")
+*.manager.launchConfig = xmldoc("erlangen.launchd.xml")
 
 ##########################################################
 #			         channel parameters                  #
