Add switch to disable cycling between SCH and CCH

--- a/examples/ieee80211p/omnetpp.ini
+++ b/examples/ieee80211p/omnetpp.ini
@@ -33,6 +33,7 @@ output-vector-file = ${resultdir}/${configname}-0-r${repetition}.vec
 *.connectionManager.alpha = 2.0
 *.connectionManager.carrierFrequency = 5.890e9 Hz
 
+*.**.nic.mac1609_4.useServiceChannel = true
 *.**.nic.mac1609_4.serviceChannel = 2
 
 *.**.nic.mac1609_4.txPower = 20mW
