--- a/tests/traci/net.netconvert.cfg
+++ b/tests/traci/net.netconvert.cfg
@@ -8,6 +8,7 @@
 	<tls.set value="10"/>
 	<tls.green.time value="999"/>
 	<tls.yellow.time value="1"/>
+	<tls.half-offset value="10"/>
     </input>
 
     <output>
