move default nodes out of examples

--- a/examples/veins/omnetpp.ini
+++ b/examples/veins/omnetpp.ini
@@ -8,7 +8,7 @@ cmdenv-status-frequency = 10000000s
 tkenv-image-path = bitmaps
 ned-path = .
 
-network = scenario
+network = org.car2x.veins.nodes.Scenario
 
 ##########################################################
 #            Simulation parameters                       #
@@ -51,7 +51,7 @@ sim-time-limit = 6000s
 *.manager.updateInterval = 0.1s
 *.manager.host = "localhost"
 *.manager.port = 9999
-*.manager.moduleType = "Car"
+*.manager.moduleType = "org.car2x.veins.nodes.Car"
 *.manager.moduleName = "node"
 *.manager.moduleDisplayString = ""
 *.manager.autoShutdown = true
