add RSU and RSU Example

--- a/examples/veins/omnetpp.ini
+++ b/examples/veins/omnetpp.ini
@@ -8,7 +8,7 @@ cmdenv-status-frequency = 10000000s
 tkenv-image-path = bitmaps
 ned-path = .
 
-network = org.car2x.veins.nodes.Scenario
+network = RSUExampleScenario
 
 ##########################################################
 #            Simulation parameters                       #
@@ -57,6 +57,26 @@ sim-time-limit = 6000s
 *.manager.autoShutdown = true
 *.manager.margin = 25
 *.manager.launchConfig = xmldoc("erlangen.launchd.xml")
+
+##########################################################
+#                       RSU SETTINGS                     #
+#                                                        #
+#                                                        #
+##########################################################
+*.rsu[0].mobility.x = 2000
+*.rsu[0].mobility.y = 2000
+*.rsu[0].mobility.z = 3
+*.rsu[*].applType = "TraCIDemoRSU11p"
+*.rsu[*].appl.debug = false
+*.rsu[*].appl.headerLength = 256 bit
+*.rsu[*].appl.sendBeacons = false
+*.rsu[*].appl.dataOnSch = false
+*.rsu[*].appl.sendData = true
+*.rsu[*].appl.beaconInterval = 1s
+*.rsu[*].appl.beaconPriority = 3
+*.rsu[*].appl.dataPriority = 2
+*.rsu[*].appl.maxOffset = 0.005s
+
 
 ##########################################################
 #            11p specific parameters                     #
