app: rewrite higher layers

--- a/examples/veins/omnetpp.ini
+++ b/examples/veins/omnetpp.ini
@@ -1,10 +1,8 @@
 [General]
 cmdenv-express-mode = true
 cmdenv-autoflush = true
-cmdenv-status-frequency = 10000000s
+cmdenv-status-frequency = 1s
 
-#tkenv-default-config = debug
-#tkenv-default-run = 1
 ned-path = .
 
 network = RSUExampleScenario
@@ -15,7 +13,7 @@ network = RSUExampleScenario
 debug-on-errors = true
 print-undisposed = false
 
-sim-time-limit = 6000s
+sim-time-limit = 200s
 
 **.scalar-recording = true
 **.vector-recording = true
@@ -31,7 +29,7 @@ sim-time-limit = 6000s
 ##########################################################
 # Annotation parameters                                  #
 ##########################################################
-*.annotations.draw = false
+*.annotations.draw = true
 
 ##########################################################
 # Obstacle parameters                                    #
@@ -40,15 +38,9 @@ sim-time-limit = 6000s
 *.obstacles.obstacles = xmldoc("config.xml", "//AnalogueModel[@type='SimpleObstacleShadowing']/obstacles")
 
 ##########################################################
-#            WorldUtility parameters                     #
-##########################################################
-*.world.useTorus = false
-*.world.use2D = false
-
-##########################################################
 #            TraCIScenarioManager parameters             #
 ##########################################################
-*.manager.updateInterval = 0.1s
+*.manager.updateInterval = 1s
 *.manager.host = "localhost"
 *.manager.port = 9999
 *.manager.autoShutdown = true
@@ -62,17 +54,14 @@ sim-time-limit = 6000s
 *.rsu[0].mobility.x = 2000
 *.rsu[0].mobility.y = 2000
 *.rsu[0].mobility.z = 3
+
 *.rsu[*].applType = "TraCIDemoRSU11p"
-*.rsu[*].appl.debug = false
-*.rsu[*].appl.headerLength = 256 bit
-*.rsu[*].appl.sendBeacons = false
+*.rsu[*].appl.headerLength = 80 bit
+*.rsu[*].appl.sendBeacons = true
 *.rsu[*].appl.dataOnSch = false
-*.rsu[*].appl.sendData = true
 *.rsu[*].appl.beaconInterval = 1s
 *.rsu[*].appl.beaconPriority = 3
 *.rsu[*].appl.dataPriority = 2
-*.rsu[*].appl.maxOffset = 0.005s
-
 
 ##########################################################
 #            11p specific parameters                     #
@@ -88,11 +77,12 @@ sim-time-limit = 6000s
 *.**.nic.mac1609_4.useServiceChannel = false
 
 *.**.nic.mac1609_4.txPower = 20mW
-*.**.nic.mac1609_4.bitrate = 18Mbps
-
+*.**.nic.mac1609_4.bitrate = 6Mbps
 *.**.nic.phy80211p.sensitivity = -89dBm
+
 *.**.nic.phy80211p.useThermalNoise = true
 *.**.nic.phy80211p.thermalNoise = -110dBm
+
 *.**.nic.phy80211p.decider = xmldoc("config.xml")
 *.**.nic.phy80211p.analogueModels = xmldoc("config.xml")
 *.**.nic.phy80211p.usePropagationDelay = true
@@ -101,15 +91,10 @@ sim-time-limit = 6000s
 #                    WaveAppLayer                        #
 ##########################################################
 *.node[*].applType = "TraCIDemo11p"
-*.node[*].appl.debug = false
-*.node[*].appl.headerLength = 256 bit
-*.node[*].appl.sendBeacons = false
+*.node[*].appl.headerLength = 80 bit
+*.node[*].appl.sendBeacons = true
 *.node[*].appl.dataOnSch = false
-*.node[*].appl.sendData = true
 *.node[*].appl.beaconInterval = 1s
-*.node[*].appl.beaconPriority = 3
-*.node[*].appl.dataPriority = 2
-*.node[*].appl.maxOffset = 0.005s
 
 ##########################################################
 #                      Mobility                          #
@@ -120,17 +105,12 @@ sim-time-limit = 6000s
 *.node[*].veinsmobility.z = 1.895
 *.node[*0].veinsmobility.accidentCount = 1
 *.node[*0].veinsmobility.accidentStart = 75s
-*.node[*0].veinsmobility.accidentDuration = 30s
+*.node[*0].veinsmobility.accidentDuration = 50s
 
-[Config nodebug]
-description = "default settings"
-**.debug = false
-**.coreDebug = false
-*.annotations.draw = false
+[Config WithoutChannelSwitching]
 
-[Config debug]
-description = "(very slow!) draw and print additional debug information"
-**.debug = true
-**.coreDebug = true
-*.annotations.draw = true
+[Config WithChannelSwitching]
+*.**.nic.mac1609_4.useServiceChannel = true
+*.node[*].appl.dataOnSch = true
+*.rsu[*].appl.dataOnSch = true
 
