phy: add consideration of antenna patterns

--- a/examples/veins/omnetpp.ini
+++ b/examples/veins/omnetpp.ini
@@ -68,11 +68,9 @@ sim-time-limit = 200s
 #                                                        #
 #                    NIC-Settings                        #
 ##########################################################
-*.connectionManager.pMax = 20mW
-*.connectionManager.sat = -89dBm
-*.connectionManager.alpha = 2.0
-*.connectionManager.carrierFrequency = 5.890e9 Hz
 *.connectionManager.sendDirect = true
+*.connectionManager.maxInterfDist = 2600m
+*.connectionManager.drawMaxIntfDist = false
 
 *.**.nic.mac1609_4.useServiceChannel = false
 
@@ -86,6 +84,8 @@ sim-time-limit = 200s
 *.**.nic.phy80211p.decider = xmldoc("config.xml")
 *.**.nic.phy80211p.analogueModels = xmldoc("config.xml")
 *.**.nic.phy80211p.usePropagationDelay = true
+
+*.**.nic.phy80211p.antenna = xmldoc("antenna.xml", "/root/Antenna[@id='monopole']")
 
 ##########################################################
 #                    WaveAppLayer                        #
