sample simulation: hide some clutter from stdout

--- a/examples/veins/omnetpp.ini
+++ b/examples/veins/omnetpp.ini
@@ -2,6 +2,7 @@
 cmdenv-express-mode = true
 cmdenv-autoflush = true
 cmdenv-status-frequency = 1s
+**.cmdenv-log-level = info
 
 ned-path = .
 image-path = ../../images
