veins_inet: use car icon by default

--- a/subprojects/veins_inet/examples/veins_inet/omnetpp.ini
+++ b/subprojects/veins_inet/examples/veins_inet/omnetpp.ini
@@ -3,6 +3,7 @@ network = Scenario
 sim-time-limit = 60s
 debug-on-errors = true
 cmdenv-express-mode = true
+image-path = ../../../../images
 
 # UDPBasicApp
 Scenario.node[*].numUdpApps = 1
