veins_inet: move to own .ned namespace

--- a/subprojects/veins_inet/examples/veins_inet/omnetpp.ini
+++ b/subprojects/veins_inet/examples/veins_inet/omnetpp.ini
@@ -40,6 +40,6 @@ Scenario.manager.host = "localhost"
 Scenario.manager.port = 9999
 Scenario.manager.autoShutdown = true
 Scenario.manager.launchConfig = xmldoc("square.launchd.xml")
-Scenario.manager.moduleType = "Car"
+Scenario.manager.moduleType = "org.car2x.veins.subprojects.veins_inet.example.Car"
 
 **.vector-recording = true
