--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ examples/**/valgrind.out
 
 subprojects/veins_inet/src/Makefile
 subprojects/veins_inet/src/*.so
+subprojects/veins_inet/src/*.dll
 subprojects/veins_inet/src/**/*_m.h
 subprojects/veins_inet/src/**/*_m.cc
 subprojects/veins_inet/out
