Added models for multi-story parking garage simulation, sample garage scenario. Added a few missing changes to be based on Veins 4.7.1. Incorporated some adaptations (mainly in TraCI classes) from Veins 5 to allow more recent SUMO versions.

--- a/examples/garage/omnetpp.ini
+++ b/examples/garage/omnetpp.ini
@@ -1,21 +1,23 @@
 [General]
 cmdenv-express-mode = true
 cmdenv-autoflush = true
-cmdenv-status-frequency = 1s
-**.cmdenv-log-level = info
+cmdenv-interactive = true
+cmdenv-status-frequency = 10s
+sim-time-limit = 800s
 
 ned-path = .
 image-path = ../../images
 
-network = RSUExampleScenario
+network = org.car2x.veins.nodes.Scenario
+
 
 ##########################################################
 #            Simulation parameters                       #
 ##########################################################
 debug-on-errors = true
-print-undisposed = true
+print-undisposed = false
 
-sim-time-limit = 200s
+repeat = 10
 
 **.scalar-recording = true
 **.vector-recording = true
@@ -23,9 +25,9 @@ sim-time-limit = 200s
 **.debug = false
 **.coreDebug = false
 
-*.playgroundSizeX = 2500m
-*.playgroundSizeY = 2500m
-*.playgroundSizeZ = 50m
+*.playgroundSizeX = 500m
+*.playgroundSizeY = 500m
+*.playgroundSizeZ = 100m
 
 
 ##########################################################
@@ -33,11 +35,20 @@ sim-time-limit = 200s
 ##########################################################
 *.annotations.draw = true
 
+
 ##########################################################
 # Obstacle parameters                                    #
 ##########################################################
 *.obstacles.debug = false
-*.obstacles.obstacles = xmldoc("config.xml", "//AnalogueModel[@type='SimpleObstacleShadowing']/obstacles")
+*.obstacles.obstacles = xmldoc("config.xml", "//AnalogueModel[@type='ModelSelector']/obstacles")
+
+
+##########################################################
+# Floor parameters                                    #
+##########################################################
+*.floorControl.floorDescr = xmldoc("config.xml", "//AnalogueModel[@type='ModelSelector']/floors")
+*.floorControl.stdDev = 2.12
+
 
 ##########################################################
 #            TraCIScenarioManager parameters             #
@@ -46,24 +57,8 @@ sim-time-limit = 200s
 *.manager.host = "localhost"
 *.manager.port = 9999
 *.manager.autoShutdown = true
-*.manager.launchConfig = xmldoc("erlangen.launchd.xml")
+*.manager.carCellSize = 0m
 
-##########################################################
-#                       RSU SETTINGS                     #
-#                                                        #
-#                                                        #
-##########################################################
-*.rsu[0].mobility.x = 2000
-*.rsu[0].mobility.y = 2000
-*.rsu[0].mobility.z = 3
-
-*.rsu[*].applType = "TraCIDemoRSU11p"
-*.rsu[*].appl.headerLength = 80 bit
-*.rsu[*].appl.sendBeacons = false
-*.rsu[*].appl.dataOnSch = false
-*.rsu[*].appl.beaconInterval = 1s
-*.rsu[*].appl.beaconUserPriority = 7
-*.rsu[*].appl.dataUserPriority = 5
 
 ##########################################################
 #            11p specific parameters                     #
@@ -71,52 +66,69 @@ sim-time-limit = 200s
 #                    NIC-Settings                        #
 ##########################################################
 *.connectionManager.sendDirect = true
-*.connectionManager.maxInterfDist = 2600m
+*.connectionManager.maxInterfDist = 700m
 *.connectionManager.drawMaxIntfDist = false
 
 *.**.nic.mac1609_4.useServiceChannel = false
 
-*.**.nic.mac1609_4.txPower = 20mW
-*.**.nic.mac1609_4.bitrate = 6Mbps
-*.**.nic.phy80211p.sensitivity = -89dBm
+*.**.nic.mac1609_4.txPower = 100mW
+*.**.nic.mac1609_4.bitrate = 3Mbps
+*.**.nic.phy80211p.sensitivity = -110dBm
 
 *.**.nic.phy80211p.useThermalNoise = true
-*.**.nic.phy80211p.thermalNoise = -110dBm
+*.**.nic.phy80211p.thermalNoise = -98dBm
 
 *.**.nic.phy80211p.decider = xmldoc("config.xml")
-*.**.nic.phy80211p.analogueModels = xmldoc("config.xml")
 *.**.nic.phy80211p.usePropagationDelay = true
 
-*.**.nic.phy80211p.antenna = xmldoc("antenna.xml", "/root/Antenna[@id='monopole']")
+*.**.nic.phy80211p.antenna = xmldoc("antenna.xml", "//Antenna[@id='antenna2']")
+
 
 ##########################################################
 #                    WaveAppLayer                        #
 ##########################################################
-*.node[*].applType = "TraCIDemo11p"
+*.node[*].applType = "MyVeinsApp"
+*.node[*].appl.debug = false
 *.node[*].appl.headerLength = 80 bit
+*.node[0].appl.sendBeacons = true
 *.node[*].appl.sendBeacons = false
 *.node[*].appl.dataOnSch = false
-*.node[*].appl.beaconInterval = 1s
+*.node[*].appl.sendData = false
+*.node[*].appl.communicateWhileParked = true
+*.node[*].appl.beaconInterval = 0.1s
+*.node[*].appl.beaconPriority = 3
+*.node[*].appl.dataPriority = 2
+
 
 ##########################################################
 #                      Mobility                          #
 ##########################################################
-*.node[*].veinsmobilityType.debug = true
+*.node[*].veinsmobilityType.debug = false
 *.node[*].veinsmobility.x = 0
 *.node[*].veinsmobility.y = 0
 *.node[*].veinsmobility.z = 1.895
-*.node[*0].veinsmobility.accidentCount = 1
-*.node[*0].veinsmobility.accidentStart = 75s
-*.node[*0].veinsmobility.accidentDuration = 50s
+*.node[*].veinsmobility.antennaPositionOffset = 3.0m
+*.node[*].veinsmobility.antennaHeight = 1.7m
 
-[Config Default]
 
-[Config WithBeaconing]
-*.rsu[*].appl.sendBeacons = true
+# simulate single sender and receiver (uncomment at the end of .rou.xml file)
+[Config single]
+*.manager.launchConfig = xmldoc("garage.launchd.xml")
+*.manager.seed = 23423
+*.**.nic.phy80211p.analogueModels = xmldoc("config.xml")
+output-scalar-file = ${resultdir}/${configname}-r${repetition}.sca
+output-vector-file = ${resultdir}/${configname}-r${repetition}.vec
+
+
+# simulate garage filled with cars (uncomment flows of vehicles in .rou.xml file)
+[Config many]
+sim-time-limit = 17030s
+*.manager.firstStepAt = 17000s
+*.node[0].appl.sendBeacons = true
 *.node[*].appl.sendBeacons = true
-
-[Config WithChannelSwitching]
-*.**.nic.mac1609_4.useServiceChannel = true
-*.node[*].appl.dataOnSch = true
-*.rsu[*].appl.dataOnSch = true
+*.node[*].appl.beaconInterval = 1.0s
+*.manager.launchConfig = xmldoc("garage.launchd.xml")
+*.**.nic.phy80211p.analogueModels = xmldoc("config.xml")
+output-scalar-file = ${resultdir}/${configname}-r${repetition}.sca
+output-vector-file = ${resultdir}/${configname}-r${repetition}.vec
 
