vegetation adapted without Obstacles.*

--- a/examples/graefenberg/omnetpp.ini
+++ b/examples/graefenberg/omnetpp.ini
@@ -35,6 +35,8 @@ sim-time-limit = 2500s
 ##########################################################
 *.obstacles.debug = false
 *.obstacles.obstacles = xmldoc("config3d.xml", "//AnalogueModel[@type='SimpleObstacleShadowing']/obstacles")
+*.vegetationObstacles.debug = false
+*.vegetationObstacles.obstacles = xmldoc("config3d.xml", "//AnalogueModel[@type='SimpleObstacleShadowing']/obstacles")
 
 
 ##########################################################
