--- a/examples/graefenberg/omnetpp.ini
+++ b/examples/graefenberg/omnetpp.ini
@@ -36,7 +36,7 @@ sim-time-limit = 2500s
 *.obstacles.debug = false
 *.obstacles.obstacles = xmldoc("config3d.xml", "//AnalogueModel[@type='SimpleObstacleShadowing']/obstacles")
 *.vegetationObstacles.debug = false
-*.vegetationObstacles.obstacles = xmldoc("config3d.xml", "//AnalogueModel[@type='SimpleObstacleShadowing']/obstacles")
+*.vegetationObstacles.obstacles = xmldoc("config3d.xml", "//AnalogueModel[@type='VegetationWeissbg']/obstacles")
 
 
 ##########################################################
