stopped at vegetationFITUR

--- a/examples/graefenberg/omnetpp.ini
+++ b/examples/graefenberg/omnetpp.ini
@@ -18,6 +18,8 @@ sim-time-limit = 2500s
 **.scalar-recording = true
 **.vector-recording = true
 
+warmup-period=119s
+
 **.debug = true
 **.coreDebug = true
 
@@ -36,7 +38,7 @@ sim-time-limit = 2500s
 *.obstacles.debug = false
 *.obstacles.obstacles = xmldoc("config3d.xml", "//AnalogueModel[@type='SimpleObstacleShadowing']/obstacles")
 *.vegetationObstacles.debug = false
-*.vegetationObstacles.obstacles = xmldoc("config3d.xml", "//AnalogueModel[@type='VegetationWeissbg']/obstacles")
+*.vegetationObstacles.obstacles = xmldoc("config3d.xml", "//AnalogueModel[@type='VegetationFITUR']/obstacles")
 
 
 ##########################################################
