epstein-peterson modified

--- a/examples/graefenberg/omnetpp.ini
+++ b/examples/graefenberg/omnetpp.ini
@@ -37,8 +37,8 @@ warmup-period=119s
 ##########################################################
 *.obstacles.debug = false
 *.obstacles.obstacles = xmldoc("config3d.xml", "//AnalogueModel[@type='SimpleObstacleShadowing']/obstacles")
-*.vegetationObstacles.debug = false
-*.vegetationObstacles.obstacles = xmldoc("config3d.xml", "//AnalogueModel[@type='VegetationFITUR']/obstacles")
+#*.vegetationObstacles.debug = false
+#*.vegetationObstacles.obstacles = xmldoc("config3d.xml", "//AnalogueModel[@type='VegetationFITUR']/obstacles")
 
 
 ##########################################################
