--- a/examples/graefenberg/omnetpp.ini
+++ b/examples/graefenberg/omnetpp.ini
@@ -13,12 +13,14 @@ network = TraceScenario
 debug-on-errors = true
 print-undisposed = false
 
+repeat = 1
 sim-time-limit = 2500s
 
+simtime-resolution = ps
 **.scalar-recording = true
 **.vector-recording = true
 
-warmup-period=119s
+#warmup-period=119s
 
 **.debug = true
 **.coreDebug = true
